--- a/main.html
+++ b/main.html
@@ -15,6 +15,13 @@ Hosting</title>
 </head>
 
 <body>
+      <div class="container-fluid mt-0  bg-change">
+    <div class="container">
+      <div class="row text-center ">   
+    <h1 class="lato-text text-center" > <i class="fa-solid fa-house pe-2" > </i><a href="./index.html">Home Page</a></i></h1>
+ </div>
+    </div>
+  </div>
     <div class="container py-5">
 
         <div class="row">
@@ -32,7 +39,7 @@ Hosting</title>
                         alt="Linux VPS Hosting vs. Linux cPanel Shared Hosting">
                 </div>
 
-                <p>In the vast landscape of web hosting solutions, Linux-based options remain at the
+                <p >In the vast landscape of web hosting solutions, Linux-based options remain at the
                     forefront for their reliability, security, and versatility. When it comes to hosting your
                     website or application on a Linux environment, two prominent choices emerge: Linux
                     VPS (Virtual Private Server) Hosting and Linux cPanel Shared Hosting. Both options
