--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <div class="card-body">
             <h3 class="card-title lato-bold">
-              The Vital Role of Rapid SSL Certificates in Safeguarding Website Security  </h3>
+              Exploring the Differences: Linux VPS Hosting vs. Linux cPanel Shared Hosting</h3>
             <!-- <div class="row mb-2">
                   <div class="poppins-regular" >By <span style="color:rgb(239, 92, 39);"> Rachel Furtado</span> <span class="p-2">|</span> <span>April 15, 2024</span></div>                
                 </div> -->
@@ -58,7 +58,7 @@
               forefront for their reliability, security, and versatility. When it comes to hosting your
               website or application on a Linux environment, two prominent choices emerge: Linux
               VPS (Virtual Private Server) Hosting and Linux cPanel Shared Hosting.s</p>
-            <a href="./main.html" class="text-decoration-none">Read more...</a>
+            <a href="./" class="text-decoration-none">Read more...</a>
           </div>
         </div>
       </div>
